syntax = "proto3";

package foodi_user_service;
option go_package="github.com/foodi-org/foodi-user-service";

import "base.proto";

message TokenRequest {
  string username = 1;
  string password = 2;
  UserCoup type = 3;
}

message TokenReply {
  string token = 1;
}

message RegisterRequest {
  string type = 1;
  string phone = 2;
  optional string code = 3;
}

message RegisterReply {
  bool ok = 1;
  string token = 2;
  int64 uid = 3;
}

message UserRequest {
  string Uid = 1;
}

message UserReply {
  string Name = 1;
  string NikeName = 2;
}


// 账号服务
service Account {
  rpc Token(TokenRequest) returns (TokenReply);
  rpc Register(RegisterRequest) returns (RegisterReply);
}

service User {
  rpc Info(UserRequest) returns(UserReply);
}
